syntax = "proto3";

option csharp_namespace = "tomi.arcade.game.gol.proto";

package gameoflife;

service GameOfLifeService {
  rpc GetState (GameOfLifeRequest) returns (stream GameOfLifeResponse);
}

message GameOfLifeRequest {
  string gameId = 1;
  GameOfLifeSettings gameSettings = 2;
}

message GameOfLifeResponse {
  string gameId = 1;
  GameOfLifeSettings gameSettings = 2;
  repeated int32 gameState = 3;
}

message GameOfLifeSettings
{
	int32 width = 1;
	int32 height = 2;
    int32 chunkSize = 3;
}